# RAG

./: .env.example  README.md  pyproject.toml  requirements.txt
src/ingestion/: chunkers.py  loaders.py
