[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "anthropic>=0.25.0",
    "bcrypt>=4.1.0",
    "beautifulsoup4>=4.12.0",
    "black>=24.0.0",
    "chromadb>=0.4.0",
    "cohere>=5.0.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.110.0",
    "grandalf>=0.8",
    "groq>=0.5.0",
    "httpx>=0.27.0",
    "isort>=5.0.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=1.1.1",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",
    "mypy>=1.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "passlib>=1.7.0",
    "pinecone-client>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "pypdf>=4.0.0",
    "pypdf2>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2.0",
    "redis>=5.0.0",
    "ruff>=0.3.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.6.0",
    "tqdm>=4.0.0",
    "unstructured>=0.12.0",
    "uvicorn>=0.27.0",
]
